coding/c/error.txt


... exp_getopt.c:10:5: error: statement requires expression of integer type ('char *' invalid)
   10 |     switch (argv[1]) {
      |     ^       ~~~~~~~
1 error generated.

... The compilation error occurs because you cannot use a string (char *) or an array inside a
... C switch statement.In C, switch statements only accept integral expressions
... (integers, characters, or enums). They do not work with strings or pointers like argv[1].

-- various errno used in c

-- generated by AI

======================================================================
HOW TO USE ERRNO IN YOUR CODE
======================================================================
#include <stdio.h>
#include <string.h>
#include <errno.h>

// Example 1: Print directly to standard error
perror("Error description");

// Example 2: Convert to string programmatically
printf("System Error: %s\n", strerror(errno));

======================================================================
COMMON C/POSIX ERRNO VALUES AND MEANINGS
======================================================================

FILE AND I/O ERRORS
----------------------------------------------------------------------
EPERM           1       Operation not permitted
ENOENT          2       No such file or directory (File not found)
ESRCH           3       No such process
EINTR           4       Interrupted system call
EIO             5       I/O error
ENXIO           6       No such device or address
E2BIG           7       Argument list too long
ENOEXEC         8       Exec format error
EBADF           9       Bad file number (Invalid file descriptor)
ECHILD          10      No child processes
EAGAIN          11      Try again (Resource temporarily unavailable)
EACCES          13      Permission denied
EFAULT          14      Bad address (Bad memory address pointer)
ENOTBLK         15      Block device required
EBUSY           16      Device or resource busy
EEXIST          17      File exists
EXDEV           18      Cross-device link
ENODEV          19      No such device
ENOTDIR         20      Not a directory
EISDIR          21      Is a directory
EMFILE          24      Too many open files
ENFILE          25      File table overflow
ENOTTY          25      Not a typewriter
ETXTBSY         26      Text file busy
EFBIG           27      File too large
ENOSPC          28      No space left on device
ESPIPE          29      Illegal seek
EROFS           30      Read-only file system
EMLINK          31      Too many links
EPIPE           32      Broken pipe

SYSTEM AND RESOURCE ERRORS
----------------------------------------------------------------------
ENOMEM          12      Out of memory
EINVAL          22      Invalid argument
EDEADLK         35      Resource deadlock would occur
ENAMETOOLONG    36      File name too long
ENOLCK          37      No record locks available
ENOSYS          38      Function not implemented
ENOTEMPTY       39      Directory not empty
ELOOP           40      Too many symbolic links encountered
EWOULDBLOCK     11      Operation would block (Same value as EAGAIN)

MATHEMATICAL ERRORS
----------------------------------------------------------------------
EDOM            33      Math argument out of domain of func
ERANGE          34      Math result not representable

-- simple example stderror

#include <stdio.h>
#include <string.h>  // Required for strerror()
#include <errno.h>   // Required for errno

int main() {
    // Attempting to open a non-existent file sets errno
    FILE *file = fopen("this_file_does_not_exist.txt", "r");

    if (file == NULL) {
        // strerror(errno) turns the integer (2) into "No such file or directory"
        printf("Failed to open file! System error: %s\n", strerror(errno));
        return 1;
    }

    fclose(file);
    return 0;
}

-- output:
Failed to open file! System error: No such file or directory

-- End of AI(EOAI)
